# Logos

./: conftest.py  index.html  pyproject.toml  run_demo.py  run_orch.py  test_example.py
.github/: copilot-instructions.md
llm_adapter/: __init__.py  adapters.py  clients.py  openai_client.py  orchestrator.py  postprocess.py  types.py
logos_engine/: __init__.py  m_gate.py  nomics.py  se.py  se_adapter_example.py  store.py  types.py
tests/: test_adapters.py  test_llm_integration.py  test_nomics.py  test_normalize_and_fuse.py  test_openai_client.py  test_postprocess.py
